internal/xds/translator/testdata/out/xds-ir/health-check-protocol-version.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: plaintext-http2-auto
      route:
        cluster: plaintext-http2-auto-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-auto
      route:
        cluster: tls-auto-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-explicit-http2
      route:
        cluster: tls-explicit-http2-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-custom-alpn
      route:
        cluster: tls-custom-alpn-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-grpc
      route:
        cluster: tls-grpc-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-pinned-http2
      route:
        cluster: tls-pinned-http2-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-alpn-http2-only
      route:
        cluster: tls-alpn-http2-only-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: tls-alpn-both
      route:
        cluster: tls-alpn-both-dest
        upgradeConfigs:
        - upgradeType: websocket
